2004-05-19  Matthew Mueller  <donut@dakotacom.net>

	* arch/ogl/gr.c, arch/ogl/ogl.c, include/ogl_init.h,
	main/inferno.c: add anisotropic texture filtering suport (d1x
	r1.33, r1.32, r1.23, r1.32)

	* arch/ogl/ogl.c: make RENDERSTATS show size of color/depth buffer
	too (d1x r1.31)

	* arch/ogl/gr.c, arch/ogl/ogl.c, include/loadgl.c,
	include/ogl_init.h: utilize hardware multitexturing support if
	possible (requires GL_NV_texture_env_combine4 extension) (d1x
	r1.32, r1.30, r1.4, 1.22)

	* arch/ogl/glx.c: add ogl_setbrightness_internal stub for glx (d1x
	r1.17)

	* arch/ogl/wgl.c: implement SetGammaRamp on WGL (d1x r1.14)

	* arch/ogl/gr.c, arch/ogl/internal.h, arch/ogl/sdlgl.c,
	arch/ogl/wgl.c, include/ogl_init.h: implement brightness/palette
	effects in OGL using SetGammaRamp, much faster than the hack that
	was being used.  currently SDL only (though not too hard to add to
	WGL, not as easy as sdl) (d1x r1.31, r1.3, r1.13, r1.21)

	* main/menu.c: allow arbitrary (custom) resolution entry in
	change_res menu (d1x r1.14)

2004-05-19  Bradley Bell  <btb@icculus.org>

	* main/game.c, main/game.h, main/inferno.c, main/menu.c: inserted
	d1x-style res change menu (mostly works)

	* misc/args.c: use strnicmp instead of strncasecmp

2004-05-19  Matthew Mueller  <donut@dakotacom.net>

	* arch/ogl/gr.c, main/inferno.c: add -gl_trilinear OGL
	command-line option (d1x r1.27)

	* main/inferno.c: restore inferno.c initialization of
	screen_compatible and use_double_buffer to 'normal' values, broken
	long long ago in one of the high res menu patches (d1x r1.30)

	* include/args.h, main/inferno.c, misc/args.c: allow arbitrary
	resolutions to be specified on command line (d1x r1.2, r1.29,
	r1.4) -- doesn't work yet

	* arch/linux/hmiplay.c: needs to include args.h now (d1x r1.9)

	* arch/linux/hmiplay.c: implement -nomusic for linux hmiplay (d1x
	r1.8)

	* arch/linux/hmiplay.c: correct linux hmiplay handling of midi 0
	volume song stop/starting (d1x r1.7)
